--- a/app/modules/common/views/partials/withdraw_error.html
+++ b/app/modules/common/views/partials/withdraw_error.html
@@ -12,7 +12,7 @@
                 <div class="cloud2"><img src="assets/images/login_cloud2.png"></div>
             </div>
         </header>
-        <button ng-if="!confirmShowButton" class="fin-app-btn fin-orange" ng-click="ngDialog.close()" >Close</button>
-        <button ng-if="confirmShowButton" class="fin-app-btn fin-orange" ng-click="ngDialog.close()" >Confirm</button>
+        <button class="fin-app-btn fin-blue col-xs-5" ng-click="gotoPlanning()">Continue Planning</button>
+        <button class="fin-app-btn fin-orange pull-right" ng-click="gotoDashboard()" >Go to Dashboard</button>
     </div>
 </div>
