--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -390,6 +390,17 @@ aside.drawer.open .list-cover ul li:nth-child(7) {
        -o-transition-delay: 0.8s;
           transition-delay: 0.8s;
 }
+aside.drawer.open .list-cover ul li.disabled {
+  opacity: 0.5;
+  -webkit-transform: none;
+     -moz-transform: none;
+      -ms-transform: none;
+       -o-transform: none;
+          transform: none;
+}
+aside.drawer.open .list-cover ul li.disabled a:hover {
+  opacity: 1;
+}
 aside.drawer.open .list-cover .fin-start {
   -webkit-transform: translateX(0%);
      -moz-transform: translateX(0%);
@@ -3433,7 +3444,6 @@ span.error-text {
 }
 .swiper-container.customSwiper .swiper-content {
   padding-bottom: 100px;
-  padding-top: 6%;
   min-height: 500px;
 }
 @media only screen and (max-width:768px) {
@@ -3467,8 +3477,12 @@ span.error-text {
   margin-right: 5px;
 }
 .swiper-container.customSwiper .swiper-content p .swiper-input.risk-age {
-  width: 31%;
+  width: 45%;
   left: 0;
+}
+.swiper-container.customSwiper .swiper-content p .swiper-input.risk-age input {
+  color: #f26529 !important;
+  font-size: 2em !important;
 }
 .swiper-container.customSwiper .swiper-content p .swiper-input.year {
   width: 10%;
@@ -3499,7 +3513,7 @@ span.error-text {
   font-family: 'PlayfairDisplay-Regular';
   color: #247abc;
   font-weight: normal;
-  font-size: 1.25em !important;
+  font-size: 1.25em;
   width: 100%;
   border: none;
   outline: none;
@@ -5011,6 +5025,9 @@ section.quickInvest .started {
   margin-left: 10%;
   margin-top: 9%;
 }
+.goal-ngdialog-overlay .ngdialog-content .error-popup-container .erorr-popup-wrapper .fin-app-btn {
+  font-size: 0.75em;
+}
 .goal-ngdialog-overlay .ngdialog-content .error-popup-container .settings_wrapper .login-form {
   margin-top: 45px;
   width: 100%;
@@ -5040,11 +5057,27 @@ section.quickInvest .started {
   float: left;
   color: #dad6d6;
 }
+.goal-ngdialog-overlay .ngdialog-content .error-popup-container .settings_wrapper .login-form .form-group span.without-error span.correct {
+  width: 5%;
+  float: left;
+}
+.goal-ngdialog-overlay .ngdialog-content .error-popup-container .settings_wrapper .login-form .form-group span.without-error span.correct:after {
+  content: '\2713';
+  font-size: 1.5em;
+}
 .goal-ngdialog-overlay .ngdialog-content .error-popup-container .settings_wrapper .login-form .form-group span.error-text {
   position: relative!important;
   color: #f24965;
   width: 100%!important;
   float: left;
+}
+.goal-ngdialog-overlay .ngdialog-content .error-popup-container .settings_wrapper .login-form .form-group span.error-text span.wrong {
+  width: 5%;
+  float: left;
+}
+.goal-ngdialog-overlay .ngdialog-content .error-popup-container .settings_wrapper .login-form .form-group span.error-text span.wrong:after {
+  content: '\00d7';
+  font-size: 1.5em;
 }
 .goal-ngdialog-overlay .ngdialog-content .error-popup-container .settings_wrapper .login-form .form-group:nth-child(2) {
   margin-bottom: 6%;
