--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -51,7 +51,7 @@
 		<div class="col-xs-12 col-lg-6 col-md-6 no-padding">
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" >
 				<div class="goals-outer-cover trackperform">
-					<div class="goals-cover" ng-click="showTrackPerformance()" ng-if="!disabledTrackPerformance">
+					<div class="goals-cover" ng-click="showTrackPerformance()" ng-if="!$root.disabledTrackPerformance">
 						<div class="image-div">
 							<img class="img img-responsive" src="assets/images/dashboardImage4.png">
 						</div>
@@ -61,7 +61,7 @@
 						</div> -->
 					</div>
 
-					<div class="goals-cover goals-cover-disabled" ng-if="disabledTrackPerformance">
+					<div class="goals-cover goals-cover-disabled" ng-if="$root.disabledTrackPerformance">
 						<div class="image-div">
 							<img src="assets/images/dashboardImage4.png">
 						</div>
@@ -75,24 +75,24 @@
 					<h4 class="text-center" ng-if="!user_flags.is_virtual">You have a smart portfolio</h4> -->
 					<div ng-if="!user_flags.is_virtual">
 						<h4 class="text-center">Track your</h4>
-						<p class="text-center score dashboardSubText no-margin paddingTop2">CURRENT INVESTMENTS</p>
+						<p class="text-center score dashboardSubText no-margin paddingTop2">Current Investments</p>
 					</div>
 
 					<div ng-if="user_flags.is_virtual && dashCounts['investCount']">
 						<h4 class="text-center">Track how your</h4>
-						<p class="text-center score dashboardSubText no-margin paddingTop2">PLANNED GOALS</p>
-						<h4 class="text-center">would grow if invested</h4>
+						<p class="text-center score dashboardSubText no-margin paddingTop2">Planned Goals</p>
+						<h4 class="text-center paddingTop2">would grow if invested</h4>
 					</div>
 
-					<div ng-if="disabledTrackPerformance">
+					<div ng-if="$root.disabledTrackPerformance">
 						<h4 class="text-center">You have</h4>
-						<p class="text-center score dashboardSubText no-margin paddingTop2">NO CURRENT INVESTMENTS OR PLANNED GOALS.</p>
+						<p class="text-center score dashboardSubText no-margin paddingTop2">No Current Investments Or Planned Goals.</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 				<div class="goals-outer-cover withdraw">
-					<div class="goals-cover" ng-click="goToWithdraw()" ng-if="showRedeem">
+					<div class="goals-cover" ng-click="$root.goToWithdraw()" ng-if="$root.showRedeem">
 						<div class="image-div withdraw-goal">
 							<img class="" src="assets/images/withdraw.png">
 						</div>
@@ -102,7 +102,7 @@
 							<label><span></span></label>
 						</div> -->
 					</div>
-					<div class="goals-cover goals-cover-disabled" ng-if="!showRedeem">
+					<div class="goals-cover goals-cover-disabled" ng-if="!$root.showRedeem">
 						<div class="image-div withdraw-goal">
 							<img src="assets/images/withdraw.png">
 						</div>
@@ -113,10 +113,10 @@
 					<!-- <h3 class="text-center">Your current risk score is</h3> -->
 	<!-- 				<p class="text-center score">5.7</p>
 				<h4 class="text-center" ng-if="portfolio_flag">You havent started building<span class="nextline">your smart profile yet</span></h4> -->
-				<h4 class="text-center" ng-if="showRedeem">Redeem now from your</h4>
-				<p class="text-center score dashboardSubText paddingTop2" ng-if="showRedeem">CURRENT INVESTMENTS.</p>
-				<h4 class="text-center" ng-if="!showRedeem">You have</h4>
-				<p class="text-center score dashboardSubText paddingTop2" ng-if="!showRedeem">NO CURRENT INVESTMENTS</p>
+				<h4 class="text-center" ng-if="$root.showRedeem">Redeem now from your</h4>
+				<p class="text-center score dashboardSubText paddingTop2" ng-if="$root.showRedeem">Current Investments.</p>
+				<h4 class="text-center" ng-if="!$root.showRedeem">You have</h4>
+				<p class="text-center score dashboardSubText paddingTop2" ng-if="!$root.showRedeem">No Current Investments.</p>
 				</div>
 			</div>
 		</div>
