--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -21,8 +21,8 @@
 				</div>
 				<div class="col-xs-12 desc">
 					<!-- <p class="text-center">Simply Build Wealth through monthly<span class="nextline">SIP or one-time lumpsum investment.</span></p> -->
-					<p class="text-center">Don’t want to plan? Zip to make a quick investment.</p>
-					<h3 class="text-center"><span class="currency">&#8377</span>{{(quickInvestAmt | amountSeffix) || 0}} annual investment</h3>
+					<p class="text-center no-margin">Don’t want to plan? Zip to make a quick investment.</p>
+					<h3 class="text-center no-margin"><span class="currency">&#8377</span>{{(quickInvestAmt | amountSeffix) || 0}} annual investment</h3>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
@@ -42,8 +42,8 @@
 				</div>
 				<div class="col-xs-12 desc">
 					<!-- <p class="text-center">Invest in Equity Linked Savings Schemes<span class="nextline">(ELSS) and save taxes under section</span><span class="nextline">80C.</span></p> -->
-					<p class="text-center">Invest in best performing ELSS funds & save taxes under Section 80C.</p>
-					<h3 class="text-center"><span class="currency">&#8377</span>{{(taxAmtInvested | amountSeffix) || 0}} annual investment</h3>
+					<p class="text-center no-margin">Invest in best performing ELSS funds & save taxes under Section 80C.</p>
+					<h3 class="text-center no-margin"><span class="currency">&#8377</span>{{(taxAmtInvested | amountSeffix) || 0}} annual investment</h3>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover" click-redirect="/goals" >
@@ -59,8 +59,8 @@
 				</div>
 				<div class="col-xs-12 desc">
 					<!-- <p class="text-center">Save for a financial goal like Retirement,<span class="nextline">Education, Vacation, etc.</span></p> -->
-					<p class="text-center">Set up goals like retirement, children’s education, etc. with guided advice.</p>
-					<h3 class="text-center"><span class="currency">&#8377</span>{{(finGoalsAmt | amountSeffix) || 0}} annual investment</h3>
+					<p class="text-center no-margin">Set up goals like retirement, children’s education, etc. with guided advice.</p>
+					<h3 class="text-center no-margin"><span class="currency">&#8377</span>{{(finGoalsAmt | amountSeffix) || 0}} annual investment</h3>
 				</div>				
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
@@ -81,8 +81,8 @@
 				</div>
 				<div class="col-xs-12 desc">
 					<!-- <p class="text-center">Conveniently park your money in<span class="nextline">smarter mutual fund alternatives than</span><span class="nextline">traditional bank accounts.</span></p> -->
-					<p class="text-center">Invest in Liquid Funds to earn higher interest than Savings Bank.</p>
-					<h3 class="text-center"><span class="currency">&#8377</span>{{(liqAmtInvested | amountSeffix) || 0}} annual investment</h3>
+					<p class="text-center no-margin">Invest in Liquid Funds to earn higher interest than Savings Bank.</p>
+					<h3 class="text-center no-margin"><span class="currency">&#8377</span>{{(liqAmtInvested | amountSeffix) || 0}} annual investment</h3>
 				</div>
 			</div>
 		</div>
