--- a/less/modal.less
+++ b/less/modal.less
@@ -210,6 +210,9 @@
 		    margin-top: 9%;
 		}
     }
+    .fin-app-btn {
+    	font-size: 0.75em;
+    }
 }
 .settings_wrapper{
 	.login-form{
@@ -242,12 +245,28 @@
 			    width: 100%!important;
 			    float: left;
 			    color: #dad6d6;
+			    span.correct{
+			    	width: 5%;
+			    	float: left;
+			    	&:after{
+		    		    content: '\2713';
+	    				font-size: 1.5em;
+			    	}
+			    }
 	    	}
 	    	span.error-text{
     		    position: relative!important;
 			    color: #f24965;
 			    width: 100%!important;
 			    float: left;
+			    span.wrong{
+			    	width: 5%;
+			    	float: left;
+			    	&:after{
+		    		    content: '\00d7';
+	    				font-size: 1.5em;
+			    	}
+			    }
 	    	}
 	    }
 
