Fixing bugs and issues. Worked on invest now issues

--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -90,7 +90,7 @@
 	<div class="col-xs-12 bottom-desc" ng-if="$root.goalExists || $root.finGoalAnswered">
 		<p class="text-center">I am done planning my investments.</p>
 		<div class="fin-btn-group">
-			<button class="fin-app-btn fin-orange" ng-click="goToInvest()">CONFIRM & PAY</button>
+			<button class="fin-app-btn fin-orange" goto-invest>CONFIRM & PAY</button>
 		</div>
 		<h4 class="text-center pull-left full-width" ng-click="showGoal();">TRACK INVESTMENTS<span class="nextline">to view existing goals</span></h4>
 	</div>
