--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -4533,11 +4533,6 @@ section.planinvest .invest-outer-cover .investCover .checkbox-cover-delete label
      -moz-border-radius: 50%;
           border-radius: 50%;
 }
-@media only screen and (min-width:1400px) {
-  section.planinvest .invest-outer-cover .investCover {
-    height: 350px;
-  }
-}
 section.planinvest .invest-outer-cover button {
   position: absolute;
   bottom: -21px;
@@ -5021,9 +5016,10 @@ section.quickInvest .started {
   font-family: 'PlayfairDisplay-Regular';
   color: #101010;
   font-weight: normal;
-  font-size: 1.5em;
+  font-size: 1.2em;
   margin-left: 10%;
   margin-top: 9%;
+  line-height: 24px;
 }
 .goal-ngdialog-overlay .ngdialog-content .error-popup-container .erorr-popup-wrapper .fin-app-btn {
   font-size: 0.75em;
