--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -140,7 +140,7 @@
 		<div class="no-padding col-xs-12 col-sm-10 col-md-6 col-lg-4">
 			<div class="fin-btn-group addMargin text-left">
 	            <button click-redirect="/planInvest" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
-	            <button ng-click="goToInvest()" class="fin-app-btn fin-orange">CONFIRM & PAY</button>
+	            <button goto-invest class="fin-app-btn fin-orange">CONFIRM & PAY</button>
 	        </div>
 	    </div>
 	</div>
