--- a/less/modal.less
+++ b/less/modal.less
@@ -205,9 +205,10 @@
 		    font-family: 'PlayfairDisplay-Regular';
 		    color: #101010;
 		    font-weight: normal;
-		    font-size: 1.5em;
+		    font-size: 1.2em;
 		    margin-left: 10%;
 		    margin-top: 9%;
+		    line-height: 24px;
 		}
     }
     .fin-app-btn {
