--- a/app/modules/registration/views/change_password.html
+++ b/app/modules/registration/views/change_password.html
@@ -21,7 +21,7 @@
 				<div class="form-group">
 					<label class="">New Password</label>
 					<input check-password ng-class="{'has-error':mobileForm.phone.$error.pattern}" type="password" name="new_password" ng-model="new_password" required>
-						
+
 					<span class="without-error" ng-class="{'error-text':mobileForm.new_password.$error.oneNumber,'normal':reset}"><span ng-if="mobileForm.new_password.$error.oneNumber" class="wrong"></span><span ng-if="!mobileForm.new_password.$error.oneNumber" class="correct"></span>Please enter atleast one number</span>
 			        <!-- <span class="without-error" ng-class="{'error-text':registerForm.password.$error.oneUpper,'normal':reset}"><span ng-if="registerForm.password.$error.oneUpper" class="wrong"></span><span ng-if="!registerForm.password.$error.oneUpper" class="correct"></span>Please enter one upper case</span> -->
 			        <span class="without-error" ng-class="{'error-text':mobileForm.new_password.$error.oneSmall,'normal':reset}"><span ng-if="mobileForm.new_password.$error.oneSmall" class="wrong"></span><span ng-if="!mobileForm.new_password.$error.oneSmall" class="correct"></span>Please enter atleast one small case</span>
@@ -31,7 +31,7 @@
 					
 				</div>
 				<div class="login-btn-group">
-					<button ng-disabled="mobileForm.$invalid || old_password != new_password" class="fin-app-btn fin-orange full-width" ng-click="changePassword(old_password, new_password)">Submit</button>
+					<button ng-disabled="mobileForm.new_password.$invalid" class="fin-app-btn fin-orange full-width" ng-click="changePassword(old_password, new_password)">Submit</button>
 				</div>
 				<div class="form-error" ng-if="errorPasswordSettings"><p ng-bind="errorPasswordSettings"></p></div>
 			</form>
