--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -3401,8 +3401,10 @@
         <div class="image-backdrop"><img src="assets/images/investerRegistration.png"></div>
         <p>Registration Complete</p>
     </div>    
-    <div class="fin-btn-group gotoPages">
-        <button ng-show="(step == 1)" click-redirect="/dashboard" class="fin-app-btn fin-orange content-next">CONTINUE TO DASHBOARD</button>
+    <div class="col-xs-10 col-lg-4 col-sm-7 col-md-4 fin-btn-group-wrapper">
+        <div class="fin-btn-group gotoPages">
+            <button ng-show="(step == 1)" click-redirect="/dashboard" class="fin-app-btn fin-orange content-next">CONTINUE TO DASHBOARD</button>
+        </div>
     </div>
 </div>
 
