--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -83,6 +83,7 @@ section{
 					@media @below768{
 					margin-bottom: 3%;
 					}
+					min-height:51px;
 				}
 				&.score{
 					.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@flamingoapprox,normal);
