--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -4272,6 +4272,7 @@ section.dashboard .goals-outer-cover p.desc {
   width: 100%;
   margin-bottom: 7%;
   margin-top: 3%;
+  min-height: 51px;
 }
 @media only screen and (max-width:768px) {
   section.dashboard .goals-outer-cover p.desc {
