--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -399,6 +399,11 @@ section{
 				}
 
 			}
+			&.graph-cover{
+				.highcharts-container{
+					border: 1px dotted #333;
+				}
+			}
 		}
 		.chart-main-tabs{
 			li{
