--- a/app/modules/investwithdraw/views/withdrawStart.html
+++ b/app/modules/investwithdraw/views/withdrawStart.html
@@ -4,7 +4,7 @@
 			<div class="col-xs-12">
 				<div class="row">
 					<div class="table-outer-cover withdraw" ng-repeat="recommendedSchemes in $root.redeemData">
-						<div class="seperate-cover" custom-scroll-bar>
+						<div class="seperate-cover">
 							<h4>{{recommendedSchemes.goal_name}}</h4>
 							<div class="table-seperate" ng-repeat="eachRecommend in recommendedSchemes.funds" ng-if="eachRecommend.value[0].fund_id">
 								
